--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-redux": "5.0.7",
+    "react-router-dom": "4.2.2",
     "react-scripts": "3.3.0",
-    "reactstrap": "^8.4.0"
+    "reactstrap": "^8.4.0",
+    "redux": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
